--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scrat-command-init",
-  "version": "0.1.1",
+  "version": "0.1.1-1",
   "description": "scrat project scaffold",
   "main": "index.js",
   "scripts": {
@@ -24,6 +24,6 @@
     "yeoman-generator": "~0.17.0",
     "colors": "~0.6.2",
     "debug": "~1.0.2",
-    "generator-scrat": "~0.2.0"
+    "generator-scrat": "scrat-team/generator-scrat"
   }
 }
